--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,7 +105,8 @@ header {
 	text-decoration: none;
 }
 
-main { 
+main { background-image: url(../images/moonbackground.jpg);
+        overflow: hidden;
 }
 
 h1 {color: #4aaaa5;
@@ -119,16 +120,27 @@ h2 { color: #4aaaa5;
     padding-top: 10px;
 }
 
+h3 {font-family: 'Georgia', Times, Times New Roman, serif;
+    padding-top: 10px ;
+    padding-bottom: 10px;
+    background: #ccc;
+    text-decoration: none;
+    color: #fff;
+    width: 200px;
+    text-align: center;
+}
+
 .two-thirds {
-	width: 650px;
+	width: 71.875%;
 	float: left;
-	margin-right: 40px;
+    padding-right: 20px;
 	box-sizing: border-box;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    background-color: #fff;
-    border-style: solid;
-    border-width: 2px;
-    border-color: #dddddd;
+}
+
+.grayborder { border: 2px solid #dddddd;
+            background-color: #fff;
+            overflow: hidden; 
 }
 
 #biophoto {
@@ -142,21 +154,25 @@ p { padding-left: 10px;
     padding-right: 10px;
     }
 
-}
 .one-third {
-	width: 270px;
+	width: 28.125%;
 	float: left;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     background-color: #fff;
     border-style: solid;
-    border-width: 10px;
-    border-color: red;
+    border-width: 2px;
+    border-color: #dddddd;
+    box-sizing: border-box;
 }
 
-#social {
-    max-height: 100%;
+.social {
+    width: 33.33333%;
     float: left;
-    ;
+    padding-left: 10px;
+    padding-right: 10px;
+    box-sizing: border-box;
+    padding-top: 15px;
+    padding-bottom: 30px;
 }
 
 /*CONTACT FORM */
@@ -170,7 +186,25 @@ form {
 .emailform .emailform .messageform p { padding-top: 5px;
 }
 
-/* footer */
+/* portfolio boxes */
+
+.PortfolioContainer {
+    margin: 10px 10px 10px 10px;
+}
+
+.PortfolioItem {
+    position: relative;
+    width: 33.3333333%;
+    float: left;
+}
+
+.PortfolioTitles {
+    bottom: 5px;
+    position: absolute;
+    left: 0px;
+    right: 0px;
+}
+
 
 footer {
     clear: both;
@@ -183,6 +217,7 @@ footer {
     padding-top: 20px;
     color: white;
 }
+
 
 /* ==========================================================================
    Media Queries
