--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,15 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+html, body {
+    height: 100%;
+}
+.wrapper {
+    min-height: 100%;
+    margin-bottom: -62px;
+    background-image: url(../images/moonbackground.jpg);
+    overflow: hidden;
+}
 header {
     max-width: 100%;
     border-style: solid;
@@ -63,65 +72,56 @@ header {
     background: #ffffff;
 }
 .container {
-	max-width: 960px;
-    max-height: 100%;
-	margin: 0 auto;
+    max-width: 960px;
+    margin: 0 auto;
 }
-
- .logo {
-	float: left;
-	padding: 20px 40px;
+.push {
+    height: 62px;
+}
+.logo {
+    float: left;
+    padding: 20px 40px;
     margin-top: 20px;
-	background: #4aaaa5;
+    background: #4aaaa5;
     text-decoration: none;
-	color: #fff;
-	font-weight: bold;
-	font-size: 40px;
-	line-height: 40px;
+    color: #fff;
+    font-weight: bold;
+    font-size: 40px;
+    line-height: 40px;
     font-family: 'Georgia', Times, Times New Roman, serif;
 }
-
 .menu {
-	float: right;
-	list-style: none;
-	margin: 0;
-	padding: 35px 0 0;
+    float: right;
+    list-style: none;
+    margin: 0;
+    padding: 35px 45px 0px 0px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
-
 .menu li {
-	float: left;
-	padding-right: 20px;
+    float: left;
+    padding-right: 20px;
 }
-
 .menu li:last-child {
-	padding-right: 0;
+    padding-right: 0;
 }
-
 .menu li a {
-	color: #777777;
-	font-size: 1em
-	line-height: 24px;
-	text-decoration: none;
+    color: #777777;
+    font-size: 1em line-height: 24px;
+    text-decoration: none;
 }
-
-main { background-image: url(../images/moonbackground.jpg);
-        overflow: hidden;
-}
-
-h1 {color: #4aaaa5;
+h1 {
+    color: #4aaaa5;
     font-family: 'Georgia', Times, Times New Roman, serif;
     padding-left: 10px;
-} 
-
-h2 { color: #4aaaa5;
-    font-family: 'Georgia', Times, Times New Roman, serif;
-    padding-left: 15px;
-    padding-top: 10px;
 }
-
-h3 {font-family: 'Georgia', Times, Times New Roman, serif;
-    padding-top: 10px ;
+h2 {
+    color: #4aaaa5;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    text-align: center;
+}
+h3 {
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    padding-top: 10px;
     padding-bottom: 10px;
     background: #ccc;
     text-decoration: none;
@@ -129,42 +129,40 @@ h3 {font-family: 'Georgia', Times, Times New Roman, serif;
     width: 200px;
     text-align: center;
 }
-
 .two-thirds {
-	width: 71.875%;
-	float: left;
+    width: 71.875%;
+    float: left;
     padding-right: 20px;
-	box-sizing: border-box;
+    box-sizing: border-box;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    margin-top: 30px;
 }
-
-.grayborder { border: 2px solid #dddddd;
-            background-color: #fff;
-            overflow: hidden; 
+.grayborder {
+    border: 2px solid #dddddd;
+    background-color: #fff;
+    overflow: hidden;
 }
-
 #biophoto {
     width: 30%;
     padding-left: 10px;
     padding-right: 10px;
     padding-bottom: 5px;
 }
-
-p { padding-left: 10px; 
+p {
+    padding-left: 10px;
     padding-right: 10px;
-    }
-
+}
 .one-third {
-	width: 28.125%;
-	float: left;
+    width: 28.125%;
+    float: left;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     background-color: #fff;
     border-style: solid;
     border-width: 2px;
     border-color: #dddddd;
     box-sizing: border-box;
+    margin-top: 30px;
 }
-
 .social {
     width: 33.33333%;
     float: left;
@@ -182,8 +180,11 @@ form {
     padding-left: 10px;
     padding-bottom: 20px;
 }
-
-.emailform .emailform .messageform p { padding-top: 5px;
+.emailform .emailform .messageform p {
+    padding-top: 5px;
+}
+.submitbutton {
+    color: #4aaaa5;
 }
 
 /* portfolio boxes */
@@ -191,21 +192,17 @@ form {
 .PortfolioContainer {
     margin: 10px 10px 10px 10px;
 }
-
 .PortfolioItem {
     position: relative;
     width: 33.3333333%;
     float: left;
 }
-
 .PortfolioTitles {
     bottom: 5px;
     position: absolute;
     left: 0px;
     right: 0px;
 }
-
-
 footer {
     clear: both;
     max-width: 100%;
@@ -216,6 +213,7 @@ footer {
     padding-bottom: 20px;
     padding-top: 20px;
     color: white;
+    height: 22px;
 }
 
 
